examples/failing-examples/keyword-used-incorrectly.kl
#lang "prelude.kl"

(import "keyword-test.kl")

(example
  (my-then "math works"
   my-else "math is broken"))
